# template-paper

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .in  LICENSE  README.md  Runfile.md  cookiecutter.json  pyproject.toml  pytest.ini  requirements.txt  tbump.toml
.github/workflows/: static.yml
data/: auto-mpg.csv
deliverables/: index.html  paper.html  poster.html
docs/: _publish.yml  _quarto.yml  biblio.bib  paper.qmd  poster.qmd
docs/_extensions/betterposter/: betterposter.css  poster-template.html
docs/_extensions/ieee/: .gitattributes  _extension.yml  ieee-access-mwe.tex  ieee-preamble.tex  ieee-template.tex  ieee-tran-mwe.tex  ieeeaccess.cls  pandoc.tex
docs/_extensions/mydefault/: _extension.yml  preamble.tex  title.tex
notebooks/: 01-notebook.ipynb  01-notebook.py  jupytext.toml  support.py
src/: myinit.py  mymodule.py
template_paper/: EDA.py  dataset.py  myinit.py  mymodule.py  scripts.py
tests/: dev.py  tests.py
{{cookiecutter.directory}}/: README.md  optional.gitignore  pyproject.toml  pytest.ini  tasks.py
{{cookiecutter.directory}}/docs/: _quarto.yml  biblio.bib  paper.md
{{cookiecutter.directory}}/docs/_extensions/academic/: _extension.yml  shortcodes.lua  typst-show.typ  typst-template.typ
{{cookiecutter.directory}}/docs/_extensions/default/: _extension.yml
{{cookiecutter.directory}}/docs/_extensions/ieee/: _extension.yml  custom.lua  dev.md  ieee-preamble.tex  ieee-template.tex  ieee-tran-mwe.tex  sample-body.tex
{{cookiecutter.directory}}/notebooks/: 01-notebook.ipynb  support.py
{{cookiecutter.directory}}/optional/: .gitattributes  .gitlab-ci.yml
{{cookiecutter.directory}}/src/{{cookiecutter.mypackage}}/: dataset.py  myinit.py  plots.py  scripts.py
{{cookiecutter.directory}}/tests/: dev.py  tests.py
