[tool.poetry]
name = "template-paper"
version = "0.1.0"
description = ""
authors = ["Gael Close <gcl@melexis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
forallpeople = "^2.7.0"
icecream = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
si-prefix = "^1.3.3"
sigfig = "^1.3.3"
hvplot = "^0.11.0"
holoviews = "^1.19.1"
python-box = "^7.2.0"
pyprojroot = "^0.3.0"
jupytext = "^1.16.4"
runfile = "^1.0.7"
watermark = "^2.5.0"
jupyter-cache = "^1.0.0"


[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.43"
notebook = "^7.2.2"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
