[project]
name = "template-paper"
version = "0.1.0"
description = ""
authors = [
    {name = "Gael Close", email = "gcl@melexis.com"}
    ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "forallpeople>=2.7.0",
    "gitpython>=3.1.43",
    "holoviews>=1.19.1",
    "hvplot>=0.11.0",
    "icecream>=2.1.3",
    "jupyter-cache>=1.0.0",
    "jupyterlab>=4.2.5",
    "jupytext>=1.16.4",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pyprojroot>=0.3.0",
    "python-box>=7.2.0",
    "runfile>=1.0.7",
    "seaborn>=0.13.2",
    "si-prefix>=1.3.3",
    "sigfig>=1.3.3",
    "sitepath>=0.4.0",
    "watermark>=2.5.0",
]


[tool.setuptools]
packages = ["template_paper"]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter="-all"
