[project]
name = "template-paper"
version = "0.1.0"
description = ""
authors = [
    {name = "Gael Close", email = "gcl@melexis.com"}
    ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "buckaroo>=0.9.11",
    "fire>=0.7.0",
    "forallpeople>=2.7.0",
    "gitpython>=3.1.43",
    "holoviews>=1.19.1",
    "hvplot>=0.11.0",
    "icecream>=2.1.3",
    "jupyter-cache>=1.0.0",
    "jupyterlab>=4.2.5",
    "jupytext>=1.16.4",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pyprojroot>=0.3.0",
    "python-box>=7.2.0",
    "runfile>=1.0.7",
    "seaborn>=0.13.2",
    "si-prefix>=1.3.3",
    "sigfig>=1.3.3",
    "sitepath>=0.4.0",
    "summarytools>=0.3.0",
    "tbump>=6.11.0",
    "typer>=0.16.1",
    "watermark>=2.5.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["template_paper"]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter="-all"

[project.scripts]
hello = "template_paper.scripts:app"
